util/NMEAUtils: Fix Java9+ deprecation for new Float.